src/App.module.css
.root {
  padding: 20px 10px;
  margin: 0 auto;
  max-width: 960px;
}

.number {
  font-size: 24px;
}

.row {
  width: 100%;
  max-width: 700px;
  display: flex;
  flex-direction: row;
  padding-bottom: 20px;
}

.column {
  display: flex;
  flex-direction: column;
  padding-bottom: 20px;
  font-size: 18px;
}
.box,
.boxEmpty {
  width: 80px;
}

.box {
  text-align: center;
  border: 2px solid #eeeeee;
  height: 80px;
  position: relative;
}

.index {
  position: absolute;
  bottom: 5px;
  right: 5px;
  font-size: 14px;
  color: #888;
}

.boxEmpty {
  border: 2px solid rgba(255, 255, 255, 0);
  height: 5px;
  display: flex;
  flex-direction: row;
}

.start {
  border-left: 2px solid #f9788e;
}

.inside {
  border-bottom: 2px solid #f9788e;
  border-top: 2px solid #f9788e;
}

.end {
  border-right: 2px solid #f9788e;
}

.button {
  margin-right: 15px;
}

.smaller {
  background-color: #ffeef0;
}

.partition {
  background-color: #ffd4da;
}

.larger {
  background-color: #ffb6c0;
}

.highlighted {
  color: #c62641;
}

